// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Checkout renders correctly for "/delivery" route 1`] = `
Array [
  .c2 {
  background: #ffffff;
  border-right: 0;
  border: 1px solid #454545;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px;
  width: 100%;
}

.c2:last-child {
  border-right: 1px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

<nav
    className="c0"
  >
    <a
      className="c1"
      href="/checkout/delivery"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Delivery
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/payment"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Payment
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/review"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Review
      </span>
    </a>
  </nav>,
  .c0 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  padding-top: 3rem;
}

.c3 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c2 {
  bottom: 0;
  left: 0;
  padding: 1.2rem;
  position: fixed;
  width: 100%;
  box-shadow: 0 0 5px rgba(0,0,0,0.5);
}

.c1 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

<article
    className="c0"
  >
    <h1
      className="c1"
    >
      Delivery
    </h1>
    <div
      className="c2"
    >
      <a
        className="c3"
        href="/checkout/payment"
        onClick={[Function]}
      >
        Continue to Payment
      </a>
    </div>
  </article>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/payment" route 1`] = `
Array [
  .c2 {
  background: #ffffff;
  border-right: 0;
  border: 1px solid #454545;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px;
  width: 100%;
}

.c2:last-child {
  border-right: 1px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

<nav
    className="c0"
  >
    <a
      className="c1"
      href="/checkout/delivery"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Delivery
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/payment"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Payment
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/review"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Review
      </span>
    </a>
  </nav>,
  .c0 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  padding-top: 3rem;
}

.c12 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c11 {
  bottom: 0;
  left: 0;
  padding: 1.2rem;
  position: fixed;
  width: 100%;
  box-shadow: 0 0 5px rgba(0,0,0,0.5);
}

.c1 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c5 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
}

.c5:last-child {
  margin-bottom: 0;
}

.c8 {
  font-size: 1.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
}

.c8:last-child {
  margin-bottom: 0;
}

.c2 {
  font-size: 1.8rem;
  text-align: center;
  margin: 10px;
}

.c7 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #9cc472;
}

.c7:last-child {
  margin-bottom: 0;
}

.c9 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #9cc472;
}

.c9:last-child {
  margin-bottom: 0;
}

.c6 {
  float: right;
}

.c4 {
  margin: 0;
}

.c10 {
  font-size: 1.2rem;
  font-weight: bold;
}

.c3 {
  padding-left: 2rem;
  padding-right: 2rem;
}

<article
    className="c0"
  >
    <h1
      className="c1"
    >
      Payment
    </h1>
    <h3
      className="c2"
    >
      Order Summary
    </h3>
    <div
      className="c3"
    >
      <p
        className="c4"
      >
        <p
          className="c5"
        >
          Subtotal
          <span
            className="c6"
          >
            $125.00
          </span>
        </p>
      </p>
      <p
        className="c4"
      >
        <p
          className="c7"
        >
          Kohl's Cash & Discounts
          <span
            className="c6"
          >
            -$18.75
          </span>
        </p>
      </p>
      <p
        className="c4"
      >
        <p
          className="c8"
        >
          Shipping
          <span
            className="c6"
          >
            Free
          </span>
        </p>
      </p>
      <p
        className="c9"
      >
        You have earned free shipping.
      </p>
      <p
        className="c4"
      >
        <p
          className="c8"
        >
          Tax
          <span
            className="c6"
          >
            $6.38
          </span>
        </p>
      </p>
      <p
        className="c4"
      >
        <span
          className="c10"
        >
          TOTAL
          <span
            className="c6"
          >
            $
            122.7
          </span>
        </span>
      </p>
      <p
        className="c4"
      >
        <p
          className="c5"
        >
          Your Savings
          <span
            className="c6"
          >
            $122.70
          </span>
        </p>
      </p>
    </div>
    <div
      className="c11"
    >
      <a
        className="c12"
        href="/checkout/review"
        onClick={[Function]}
      >
        Review Order
      </a>
    </div>
  </article>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/review" route 1`] = `
Array [
  .c2 {
  background: #ffffff;
  border-right: 0;
  border: 1px solid #454545;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px;
  width: 100%;
}

.c2:last-child {
  border-right: 1px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

<nav
    className="c0"
  >
    <a
      className="c1"
      href="/checkout/delivery"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Delivery
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/payment"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Payment
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/review"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Review
      </span>
    </a>
  </nav>,
  .c0 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  padding-top: 3rem;
}

.c12 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c11 {
  bottom: 0;
  left: 0;
  padding: 1.2rem;
  position: fixed;
  width: 100%;
  box-shadow: 0 0 5px rgba(0,0,0,0.5);
}

.c1 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c5 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
}

.c5:last-child {
  margin-bottom: 0;
}

.c8 {
  font-size: 1.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
}

.c8:last-child {
  margin-bottom: 0;
}

.c2 {
  font-size: 1.8rem;
  text-align: center;
  margin: 10px;
}

.c7 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #9cc472;
}

.c7:last-child {
  margin-bottom: 0;
}

.c9 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #9cc472;
}

.c9:last-child {
  margin-bottom: 0;
}

.c6 {
  float: right;
}

.c4 {
  margin: 0;
}

.c10 {
  font-size: 1.2rem;
  font-weight: bold;
}

.c3 {
  padding-left: 2rem;
  padding-right: 2rem;
}

<article
    className="c0"
  >
    <h1
      className="c1"
    >
      Review
    </h1>
    <h3
      className="c2"
    >
      Order Summary
    </h3>
    <div
      className="c3"
    >
      <p
        className="c4"
      >
        <p
          className="c5"
        >
          Subtotal
          <span
            className="c6"
          >
            $125.00
          </span>
        </p>
      </p>
      <p
        className="c4"
      >
        <p
          className="c7"
        >
          Kohl's Cash & Discounts
          <span
            className="c6"
          >
            -$18.75
          </span>
        </p>
      </p>
      <p
        className="c4"
      >
        <p
          className="c8"
        >
          Shipping
          <span
            className="c6"
          >
            Free
          </span>
        </p>
      </p>
      <p
        className="c9"
      >
        You have earned free shipping.
      </p>
      <p
        className="c4"
      >
        <p
          className="c8"
        >
          Tax
          <span
            className="c6"
          >
            $6.38
          </span>
        </p>
      </p>
      <p
        className="c4"
      >
        <span
          className="c10"
        >
          TOTAL
          <span
            className="c6"
          >
            $
            122.7
          </span>
        </span>
      </p>
      <p
        className="c4"
      >
        <p
          className="c5"
        >
          Your Savings
          <span
            className="c6"
          >
            $122.70
          </span>
        </p>
      </p>
    </div>
    <div
      className="c11"
    >
      <a
        className="c12"
        href="/cart"
        onClick={[Function]}
      >
        Place Order
      </a>
    </div>
  </article>,
]
`;
